--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 	<h2>Agendamentos</h2>
-
-<!--	<b>{{ evento.titulo }} - {{ evento.data_evento }}</b> -->
-<!-- Listar tudo  -->
+	<br>
+	<a href="evento/">
+		<button name="evento">Novo Evento</button>
+	</a>
+	
 	<ul>
 		{% for evento in eventos %}
 		<li>{{ evento.titulo }} - {{ evento.get_data_evento }}</li>
